<resources>
    <string name="app_name">Smorning</string>
    <string name="main_page_title_lvl_1">Просыпайтесь мгновенно</string>
    <string name="main_page_title_lvl_2">Так вы точно проснетесь и не задремаете снова.</string>
    <string name="main_page_button_text_1">Начать работу</string>
    <string name="main_page_more_info_link">Подробнее</string>
    <string name="more_info_page_title">Эффективная технология интерактивного пробуждения</string>
    <string name="unit_1_title">Математические задания</string>
    <string name="unit_1_text">Чтобы выключить будильник и включить мышлени, решите задачи с несколькими вариантами ответов.</string>
    <string name="unit_2_title">Не поддается отключению</string>
    <string name="unit_3_title">Процедурные рингтоны</string>
    <string name="unit_3_text">Звуки будильника в нашем приложении генерируются автоматически. Рингтоны специально разработаны так, что невозможно уснуть снова.</string>
    <string name="pump_for_pictures">pump</string>
    <string name="main_activity_list_sign">Список сигналов</string>
    <string name="main_activity_plus">+</string>
    <string name="call_set_list_sign">Править</string>
</resources>
